--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
-    "DefaultConnection":  "Data Source=DatingApp.db"  //cesta k databazi
+    "DefaultConnection":  "Data Source=DatingApp.db"  
   },
   "Logging": {
     "LogLevel": {
