End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "db8tkok4l",
+    "ApiKey": "228751523653958",
+    "ApiSecret": "uBnv8hulSjUEPg4cuxJqtKM-mxE"
+  }
 }
